# docker-mirror-packages-repo

./: .gitignore  DEVGUIDE.md  DISKBASE.md  Makefile  PROBLEMS.md  README.md  SUPPORTED.md  centos-compose.yml  centos-docker-mirror.py  centos-docker-mirror.tests.py  centos-epel-makefile.mk  centos-main-makefile.mk  centos-makefile.mk  centos-mirror-compose.yml  centos-mirror.py  centos-repo-mirror.info.md  centos-repo.7.3.1611.dockerfile  centos.makefile.mk  docker-compose.yml  docker_image.py  docker_image.tests.py  docker_local_image.py  docker_local_image.tests.py  docker_mirror.py  docker_mirror.pyi  docker_mirror.tests.py  dockerdir-tests.py  dockerdir.py  dockerdir.pyi  dockerdir.tests.py  epel-makefile.mk  opensuse-compose.yml  opensuse-docker-mirror.py  opensuse-docker-mirror.tests.py  opensuse-main-makefile.mk  opensuse-makefile.mk  opensuse-mirror-compose.yml  opensuse-mirror.py  opensuse-repo-mirror.info.md  opensuse.makefile.mk  (+11 more)
.github/workflows/: lintcheck.yml  typecheck.yml
roles/docker_distro_packages_mirror/tasks/: extras.yml  main.yml
roles/docker_distro_version/tasks/: main.yml
scripts/: filelist.py  filelist.pyi  mirrorlist.py  mirrorlist.pyi  mirrors.fedoraproject.org.py  mirrors.fedoraproject.org.pyi  repodata-fix.py
