# __version__

[metadata]
name = docker-mirror-packages-repo
version = 1.7.6065
author = Guido U. Draheim
author_email = Guido.Draheim@gmx.de
license = CC0
home_page = https://www.linkedin.com/in/gdraheim/
description = allow package installations to stay local at another docker container
long_description_content_type = text/markdown
long_description = file: README

[options]
include_package_data=True
# packages = find_namespace:
packages = .

scripts =
  opensuse-docker-mirror.py
  centos-docker-mirror.py
  ubuntu-docker-mirror.py
  docker_mirror.py
  docker_mirror.pyi

# [options.package_data]
[options.data_files]
share/docker_mirror/support =
   SUPPORTED.md
   README.md
   README
   dockerdir.py
   dockerdir.pyi
share/docker_mirror/scripts =
   scripts/filelist.py
   scripts/filelist.pyi
   scripts/mirrorlist.py
   scripts/mirrorlist.pyi
   scripts/mirrors.fedoraproject.org.py
   scripts/mirrors.fedoraproject.org.pyi
   scripts/repodata-fix.py

[pycodestyle]
max-line-length = 188 
ignore = E301,E302,E305,E306,E701
# E301 Add missing blank line. (expected 1 blank line, found 0)
# E302 Add missing 2 blank lines. (expected 2 blank lines, found 0)
# E305 - (expected 2 blank lines after end of function or class)
# E306 - (expected 1 blank line before a nested definition)
# E701 Put colon-separated compound statement on separate lines. (multiple statements on one line (colon))

[mypy]
## strict = true # not allowed in setup.cfg
unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true 
disallow_incomplete_defs = true 
check_untyped_defs = true
disallow_untyped_decorators = true 
no_implicit_optional = true 
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
##
disallow_any_unimported = true
# disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
warn_unused_configs = true
